Bugfix: Width of zoom level display was too large when using attributions

--- a/src/app/map/mapbox-gl/mapbox-gl.component.scss
+++ b/src/app/map/mapbox-gl/mapbox-gl.component.scss
@@ -81,14 +81,17 @@
 }
 
 .zoom-control {
-    margin: 10px;
-    padding: 5px;
-    background-color: white;
+    margin: 10px 5px;
     opacity: 0.8;
     font-size: 20px;
 
     @media (max-width: 576px) {
         display: none;
+    }
+
+    span {
+        background-color: white;
+        padding: 5px;
     }
 }
 
